--- a/index.html
+++ b/index.html
@@ -487,6 +487,6 @@
         </main>
     </div>
     <input type="file" id="image-upload-input" class="file-upload-input" accept="image/*">
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
