--- a/index.html
+++ b/index.html
@@ -423,9 +423,12 @@
                                     <select id="image-post-ai-tone">
                                         <option value="Profesional">Profesional</option>
                                         <option value="Chistoso / Divertido">Chistoso / Divertido</option>
-                                        <option value="Inspirador" selected>Inspirador</option>
+                                        <option value="Estilo Meme">Estilo Meme</option>
                                         <option value="Polémico">Polémico</option>
                                         <option value="Sarcástico / Irónico">Sarcástico / Irónico</option>
+                                        <option value="Dramático">Dramático</option>
+                                        <option value="Inspirador" selected>Inspirador</option>
+                                        <option value="Urgente">Urgente</option>
                                         <option value="Informativo">Informativo</option>
                                     </select>
                                 </div>
