--- a/index.html
+++ b/index.html
@@ -275,6 +275,14 @@ _blank">Obtén tu clave aquí.</a></p>
                                 </select>
                             </div>
                              <div class="form-group">
+                                <label>Longitud del Post</label>
+                                <div id="ai-length-selector" class="mode-selector">
+                                    <button class="mode-btn" data-length="muy corto">Muy Corto</button>
+                                    <button class="mode-btn" data-length="corto">Corto</button>
+                                    <button class="mode-btn active" data-length="medio">Medio</button>
+                                </div>
+                            </div>
+                             <div class="form-group">
                                 <label for="ai-quantity">Cantidad de Posts a Generar</label>
                                 <input type="number" id="ai-quantity" value="3" min="1" max="10">
                             </div>
